효일이형이 한 부분

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="Chart">
+        </activity>
+
+        <activity android:name="View_Calendar">
+        </activity>
     </application>
 
 </manifest>
