매니페스트 연동 및 메인액티비티 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         <activity android:name=".ViewCalendarActivity">
         </activity>
+        <activity android:name=".EmailPasswordActivity"></activity>
     </application>
 
 </manifest>
