--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChartActivity">
-        </activity>
-
-        <activity android:name=".ViewCalendarActivity">
-        </activity>
-        <activity android:name=".EmailPasswordActivity"></activity>
+        <activity android:name=".ChartActivity"></activity>
+        <activity android:name=".ViewCalendarActivity"></activity>
+        <activity android:name=".EmailPasswordActivity" />
+        <activity android:name=".MenuActivity"></activity>
     </application>
 
 </manifest>
