db관련해서 해봄

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.androidtown.dietapp">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,9 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChartActivity"></activity>
-        <activity android:name=".ViewCalendarActivity"></activity>
+        <activity android:name=".ChartActivity" />
+        <activity android:name=".ViewCalendarActivity" />
         <activity android:name=".EmailPasswordActivity" />
+        <activity android:name=".UserInfoActivity"></activity>
         <activity android:name=".MenuActivity"></activity>
     </application>
 
